choroplethr 2.2.0
----------------------------------------------------------------
-Bug fix: zip_map wasn't working for zoom of HI or AK


choroplethr 2.1.1
----------------------------------------------------------------
-Bug fix: text for vignettes was for some reason not rebuilt into HTML.


choroplethr 2.1.0
----------------------------------------------------------------
-Add function county_zoom_choropleth, which allows you to zoom in on counties, not states. If 
an individual county is specified, render it with no fill color.
-Updated and corrected the values of df_president. Thank you to Richard Careaga.
-Update vignettes about US maps. Specifically, provide information about custom scales to include warning about interactions with insets of AK and HI.
-Add admin1_choropleth function which allows you to create an Administrative Level 1 choropleth of any
country in the world.  (Administrative Level 1 is the generic term for states, provinces, etc.). Create
a vignette demonstrating usage of this function.

choroplethr 2.0.0
----------------------------------------------------------------

-Move the maps and their helper data.frames to a separate package, choroplethrMaps
-Change dependencies (remove dependencies on maps, grid, plyr->dplyr, add R6, add WDI)
-Create R6 objects to simplify map creation
  -Base Choropleth object
	-CountryChoropleth inherits directly from Choropleth
	-Create USAChoropleth object to handle similar issues for all USA maps, such as insets and state boundaries
	-StateChoropleth, CountyChoropleth, ZipMap all inherit from those USAChoropleth
	-From a user's perspective, the only important functions on Choropleth are: new()/initialize() and render(). 