@@ -3,7 +3,7 @@
 \name{StateChoropleth}
 \alias{StateChoropleth}
 \title{Create a state-level choropleth}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x7fada7423d40> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x7fbf35984978> 
  - attr(*, "name")= chr "StateChoropleth_generator"
 }}
 \usage{
