@@ -25,11 +25,11 @@ data(df_president_ts)
 
 # create a list of choropleths of presidential election results for each year
 choropleths = list()
-for (i in 1:(ncol(df_president_ts)-1)) {
-  df           = df_president_ts[, c(ncol(df_president_ts), i)]
+for (i in 2:(ncol(df_president_ts))) {
+  df           = df_president_ts[, c(1, i)]
   colnames(df) = c("region", "value")
   title        = paste0("Presidential Election Results: ", colnames(df_president_ts)[i])
- choropleths[[i]] = state_choropleth(df, title=title)
+  choropleths[[i-1]] = state_choropleth(df, title=title)
 }
 
 # set working directory and animate
